--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "axios": "^1.5.0",
     "firebase": "^10.3.0",
+    "ml-knn": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
